--- a/jboss-errai-kitchensink-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/jboss-errai-kitchensink-archetype/src/main/resources/archetype-resources/pom.xml
@@ -24,28 +24,41 @@
       BOM -->
 #if ($enterprise == "true" || $enterprise == "y" || $enterprise == "yes" )
     <!-- Certified version of the JBoss EAP components we want to use -->
-    <version.org.jboss.spec.jboss.javaee6>3.0.0.Final-redhat-1</version.org.jboss.spec.jboss.javaee6>
-    <version.org.jboss.bom.errai>1.0.0.M12-redhat-1</version.org.jboss.bom.errai>
-    <!-- Alternatively, comment out the above line, and un-comment the line 
-      below to use version 3.0.0.Final which is based on community built dependencies. 
+
+    <version.org.jboss.spec.jboss.javaee6>3.0.2.Final-redhat-1</version.org.jboss.spec.jboss.javaee6>
+    <version.org.jboss.bom.errai>1.0.4.Final-redhat-1/</version.org.jboss.bom.errai>
+    <groupId.org.jboss.bom.errai>com.redhat.jboss.wfk.boms</groupId.org.jboss.bom.errai>
+    <!-- Alternatively, comment out the above lines, and un-comment the lines 
+      below to use version 3.0.2.Final which is based on community built dependencies. 
       You can actually use this stack with any version of JBoss AS that implements 
       the Java EE 6 web profile -->
-    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.0.Final</version.org.jboss.spec.jboss.javaee6> -->
-    <version.org.jboss.errai>${errai.target.version}</version.org.jboss.errai>
-    <version.com.google.gwt>2.4.0</version.com.google.gwt>
-    <version.org.codehaus.mojo.gwt.maven.plugin>\${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
+    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.2.Final</version.org.jboss.spec.jboss.javaee6> -->
+
+    <!-- XXX the following property is a stopgap measure until new BOMs are released -->
+    <!-- Must match the version used in the imported bom -->
+    <version.org.jboss.errai>2.2.0.Final-redhat-1</version.org.jboss.errai>
 #else
-    <version.org.jboss.spec.jboss.javaee6>3.0.0.Final</version.org.jboss.spec.jboss.javaee6>
-    <version.org.jboss.bom.errai>1.0.0.M12</version.org.jboss.bom.errai>
-    <!-- Alternatively, comment out the above line, and un-comment the line 
-      below to use version 3.0.0.Final-redhat-1 which is a release certified to 
+    <version.org.jboss.spec.jboss.javaee6>3.0.2.Final</version.org.jboss.spec.jboss.javaee6>
+    <version.org.jboss.bom.errai>1.0.4.Final</version.org.jboss.bom.errai>
+    <groupId.org.jboss.bom.errai>org.jboss.bom</groupId.org.jboss.bom.errai>
+    <!-- Alternatively, comment out the above lines, and un-comment the lines 
+      below to use version 3.0.2.Final-redhat-1 which is a release certified to 
       work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 maven 
       repository. -->
-    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.0.Final-redhat-1</version.org.jboss.spec.jboss.javaee6> -->
-    <version.org.jboss.errai>${errai.target.version}</version.org.jboss.errai>
-    <version.com.google.gwt>2.4.0</version.com.google.gwt>
-    <version.org.codehaus.mojo.gwt.maven.plugin>\${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
+    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.2.Final-redhat-1</version.org.jboss.spec.jboss.javaee6> -->
+
+    <!-- XXX the following property is a stopgap measure until new BOMs are released -->
+    <!-- Must match the version used in the imported bom -->
+    <version.org.jboss.errai>2.2.0.Final</version.org.jboss.errai>
 #end
+
+    <!-- XXX two more temporary workarounds -->
+    <version.javax.validation>1.0.0.GA</version.javax.validation>
+    <version.com.google.gwt>2.4.0</version.com.google.gwt>
+
+    <!-- This version is specified here because Maven plugin versions can't be managed by BOMs. -->
+    <version.org.codehaus.mojo.gwt.maven.plugin>2.4.0</version.org.codehaus.mojo.gwt.maven.plugin>
+
   </properties>
 
   <dependencyManagement>
@@ -66,9 +79,9 @@
       </dependency>
 
       <dependency>
-         <groupId>org.jboss.bom</groupId>
+         <groupId>\${groupId.org.jboss.bom.errai}</groupId>
          <artifactId>jboss-javaee-6.0-with-errai</artifactId>
-         <version>${version.org.jboss.bom.errai}</version>
+         <version>\${version.org.jboss.bom.errai}</version>
          <type>pom</type>
          <scope>import</scope>
      </dependency>
@@ -161,7 +174,151 @@
         <version>4.10</version>
         <type>jar</type>
         <scope>test</scope>
-      </dependency>
+        </dependency>
+  
+        <!-- All Errai Modules -->
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-bus</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-cdi-client</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-cdi-jetty</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-codegen-gwt</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-codegen</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-common</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-config</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-cordova</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-data-binding</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-ioc-bus-support</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-ioc</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-javaee-all</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-javax-enterprise</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-jaxrs-client</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-jaxrs-provider</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-jpa-client</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-js</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-location</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-marshalling</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-navigation</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-tools</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-ui</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-uibinder</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-validation</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-webworkers</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>errai-weld-integration</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.errai</groupId>
+          <artifactId>reflections</artifactId>
+          <version>${version.org.jboss.errai}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${version.javax.validation}</version>
+            <classifier>sources</classifier>
+        </dependency>
+
     </dependencies>
   </dependencyManagement>
 
