--- a/cordova-quickstart/src/main/resources/archetype-resources/pom.xml
+++ b/cordova-quickstart/src/main/resources/archetype-resources/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>${groupId}</groupId>
-  <artifactId>${artifactId}</artifactId>
-  <version>${version}</version>
+  <groupId>\${groupId}</groupId>
+  <artifactId>\${artifactId}</artifactId>
+  <version>\${version}</version>
   <packaging>war</packaging>
   <name>JBoss AS Quickstarts: Errai kitchensink</name>
   <description>A starter Java EE 6 webapp project for use on JBoss AS 7 / EAP 6, generated from the jboss-javaee6-webapp archetype</description>
@@ -20,7 +20,7 @@
       dependencies from org.jboss.spec will have their version defined by this 
       BOM -->
     <version.org.jboss.spec.jboss.javaee6>3.0.0.Final</version.org.jboss.spec.jboss.javaee6>
-    <version.org.jboss.bom.errai>1.0.0.M12</version.org.jboss.bom.errai>
+    <version.org.jboss.bom.errai>1.0.5.CR1</version.org.jboss.bom.errai>
     <!-- Alternatively, comment out the above line, and un-comment the line 
       below to use version 3.0.0.Final-redhat-1 which is a release certified to 
       work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 maven 
@@ -28,7 +28,7 @@
     <!-- <version.org.jboss.spec.jboss.javaee6>3.0.0.Final-redhat-1</version.org.jboss.spec.jboss.javaee6> -->
     <version.org.jboss.errai>3.0-SNAPSHOT</version.org.jboss.errai>
     <version.com.google.gwt>2.4.0</version.com.google.gwt>
-    <version.org.codehaus.mojo.gwt.maven.plugin>${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
+    <version.org.codehaus.mojo.gwt.maven.plugin>\${version.com.google.gwt}</version.org.codehaus.mojo.gwt.maven.plugin>
   </properties>
 
   <repositories>
@@ -58,7 +58,7 @@
       <dependency>
         <groupId>org.jboss.spec</groupId>
         <artifactId>jboss-javaee-6.0</artifactId>
-        <version>${version.org.jboss.spec.jboss.javaee6}</version>
+        <version>\${version.org.jboss.spec.jboss.javaee6}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -66,7 +66,7 @@
       <dependency>
          <groupId>org.jboss.bom</groupId>
          <artifactId>jboss-javaee-6.0-with-errai</artifactId>
-         <version>${version.org.jboss.bom.errai}</version>
+         <version>\${version.org.jboss.bom.errai}</version>
          <type>pom</type>
          <scope>import</scope>
      </dependency>
@@ -75,7 +75,7 @@
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-bus</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
         <exclusions>
           <exclusion>
             <groupId>javax.inject</groupId>
@@ -90,7 +90,7 @@
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-ioc</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
         <exclusions>
           <exclusion>
             <groupId>javax.inject</groupId>
@@ -105,69 +105,69 @@
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-tools</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-ui</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-data-binding</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <!-- Errai JAX-RS -->
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-jaxrs-client</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-jaxrs-provider</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <!-- Errai CDI Integration Modules -->
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-cdi-client</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-javax-enterprise</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-weld-integration</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <dependency>
         <groupId>org.jboss.errai</groupId>
         <artifactId>errai-cordova</artifactId>
-        <version>${version.org.jboss.errai}</version>
+        <version>\${version.org.jboss.errai}</version>
       </dependency>
 
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
-        <version>${version.com.google.gwt}</version>
+        <version>\${version.com.google.gwt}</version>
       </dependency>
 
       <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-dev</artifactId>
-        <version>${version.com.google.gwt}</version>
+        <version>\${version.com.google.gwt}</version>
       </dependency>
 
       <!-- Test dependencies -->
@@ -359,7 +359,7 @@
     <dependency>
       <groupId>org.jboss.errai</groupId>
       <artifactId>errai-cordova</artifactId>
-      <version>${version.org.jboss.errai}</version>
+      <version>\${version.org.jboss.errai}</version>
     </dependency>
 
     <!-- gwt-user is required at runtime because we use some of the client/server 
@@ -418,7 +418,7 @@
 
           <!-- Maven will append the version to the finalName (which is the name
             given to the generated war, and hence the context root) -->
-          <warName>${project.artifactId}</warName>
+          <warName>\${project.artifactId}</warName>
 
           <!-- We must exclude GWT client local classes from the deployment, 
             or classpath scanners such as Hibernate and Weld get confused when the webapp 
@@ -474,7 +474,7 @@
         <artifactId>jboss-as-maven-plugin</artifactId>
         <version>7.1.0.Final</version>
         <configuration>
-          <filename>${project.artifactId}.${project.packaging}</filename>
+          <filename>\${project.artifactId}.\${project.packaging}</filename>
         </configuration>
       </plugin>
 
@@ -486,7 +486,7 @@
         <configuration>
           <filesets>
             <fileset>
-                <directory>${basedir}</directory>
+                <directory>\${basedir}</directory>
                 <includes>
                     <include>www-test/**</include>
                     <include>.gwt/**</include>
