--- a/jboss-errai-kitchensink-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/jboss-errai-kitchensink-archetype/src/main/resources/archetype-resources/pom.xml
@@ -25,36 +25,20 @@
 #if ($enterprise == "true" || $enterprise == "y" || $enterprise == "yes" )
     <!-- Certified version of the JBoss EAP components we want to use -->
 
-    <version.org.jboss.spec.jboss.javaee6>3.0.2.Final-redhat-1</version.org.jboss.spec.jboss.javaee6>
-    <version.org.jboss.bom.errai>1.0.4.Final-redhat-1/</version.org.jboss.bom.errai>
-    <groupId.org.jboss.bom.errai>com.redhat.jboss.wfk.boms</groupId.org.jboss.bom.errai>
+    <version.org.jboss.bom>1.0.4.Final-redhat-wfk-1</version.org.jboss.bom>
     <!-- Alternatively, comment out the above lines, and un-comment the lines 
       below to use version 3.0.2.Final which is based on community built dependencies. 
       You can actually use this stack with any version of JBoss AS that implements 
       the Java EE 6 web profile -->
-    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.2.Final</version.org.jboss.spec.jboss.javaee6> -->
-
-    <!-- XXX the following property is a stopgap measure until new BOMs are released -->
-    <!-- Must match the version used in the imported bom -->
-    <version.org.jboss.errai>2.2.0.Final-redhat-1</version.org.jboss.errai>
+    <!-- <version.org.jboss.bom>1.0.4.Final</version.org.jboss.bom> -->
 #else
-    <version.org.jboss.spec.jboss.javaee6>3.0.2.Final</version.org.jboss.spec.jboss.javaee6>
-    <version.org.jboss.bom.errai>1.0.4.Final</version.org.jboss.bom.errai>
-    <groupId.org.jboss.bom.errai>org.jboss.bom</groupId.org.jboss.bom.errai>
+    <version.org.jboss.bom>1.0.4.Final</version.org.jboss.bom>
     <!-- Alternatively, comment out the above lines, and un-comment the lines 
       below to use version 3.0.2.Final-redhat-1 which is a release certified to 
       work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 maven 
       repository. -->
-    <!-- <version.org.jboss.spec.jboss.javaee6>3.0.2.Final-redhat-1</version.org.jboss.spec.jboss.javaee6> -->
-
-    <!-- XXX the following property is a stopgap measure until new BOMs are released -->
-    <!-- Must match the version used in the imported bom -->
-    <version.org.jboss.errai>2.2.0.Final</version.org.jboss.errai>
+    <!-- <version.org.jboss.bom>1.0.4.Final-redhat-wfk-1</version.org.jboss.bom> -->
 #end
-
-    <!-- XXX two more temporary workarounds -->
-    <version.javax.validation>1.0.0.GA</version.javax.validation>
-    <version.com.google.gwt>2.4.0</version.com.google.gwt>
 
     <!-- This version is specified here because Maven plugin versions can't be managed by BOMs. -->
     <version.org.codehaus.mojo.gwt.maven.plugin>2.4.0</version.org.codehaus.mojo.gwt.maven.plugin>
@@ -66,259 +50,25 @@
       <!-- JBoss distributes a complete set of Java EE 6 APIs including a 
         Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or a 
         collection) of artifacts. We use this here so that we always get the correct 
-        versions of artifacts. Here we use the jboss-javaee-6.0 stack (you can read 
+        versions of artifacts. Here we use the jboss-javaee-6.0-with-tools stack (you can read 
         this as the JBoss stack of the Java EE 6 APIs). You can actually use this 
         stack with any version of JBoss AS that implements Java EE 6, not just JBoss 
         AS 7! -->
       <dependency>
-        <groupId>org.jboss.spec</groupId>
-        <artifactId>jboss-javaee-6.0</artifactId>
-        <version>\${version.org.jboss.spec.jboss.javaee6}</version>
+        <groupId>org.jboss.bom</groupId>
+        <artifactId>jboss-javaee-6.0-with-tools</artifactId>
+        <version>\${version.org.jboss.bom}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
 
       <dependency>
-         <groupId>\${groupId.org.jboss.bom.errai}</groupId>
-         <artifactId>jboss-javaee-6.0-with-errai</artifactId>
-         <version>\${version.org.jboss.bom.errai}</version>
-         <type>pom</type>
-         <scope>import</scope>
+        <groupId>org.jboss.bom</groupId>
+        <artifactId>jboss-javaee-6.0-with-errai</artifactId>
+        <version>\${version.org.jboss.bom}</version>
+        <type>pom</type>
+        <scope>import</scope>
      </dependency>
-
-      <!-- Errai Core and ErraiBus -->
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-bus</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>javax.annotation</groupId>
-            <artifactId>jsr250-api</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-ioc</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-        <exclusions>
-          <exclusion>
-            <groupId>javax.inject</groupId>
-            <artifactId>javax.inject</artifactId>
-          </exclusion>
-          <exclusion>
-            <groupId>javax.annotation</groupId>
-            <artifactId>jsr250-api</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-tools</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <!-- Errai JAX-RS -->
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-jaxrs-client</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-jaxrs-provider</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <!-- Errai CDI Integration Modules -->
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-cdi-client</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-javax-enterprise</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.jboss.errai</groupId>
-        <artifactId>errai-weld-integration</artifactId>
-        <version>\${version.org.jboss.errai}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.google.gwt</groupId>
-        <artifactId>gwt-user</artifactId>
-        <version>\${version.com.google.gwt}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.google.gwt</groupId>
-        <artifactId>gwt-dev</artifactId>
-        <version>\${version.com.google.gwt}</version>
-      </dependency>
-
-      <!-- Test dependencies -->
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.10</version>
-        <type>jar</type>
-        <scope>test</scope>
-        </dependency>
-  
-        <!-- All Errai Modules -->
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-bus</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-cdi-client</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-cdi-jetty</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-codegen-gwt</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-codegen</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-common</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-config</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-cordova</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-data-binding</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-ioc-bus-support</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-ioc</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-javaee-all</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-javax-enterprise</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-jaxrs-client</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-jaxrs-provider</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-jpa-client</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-js</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-location</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-marshalling</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-navigation</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-tools</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-ui</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-uibinder</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-validation</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-webworkers</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>errai-weld-integration</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.jboss.errai</groupId>
-          <artifactId>reflections</artifactId>
-          <version>${version.org.jboss.errai}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.validation</groupId>
-            <artifactId>validation-api</artifactId>
-            <version>${version.javax.validation}</version>
-            <classifier>sources</classifier>
-        </dependency>
-
     </dependencies>
   </dependencyManagement>
 
