--- a/jboss-errai-kitchensink-archetype/pom.xml
+++ b/jboss-errai-kitchensink-archetype/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.jboss.errai.archetypes</groupId>
     <artifactId>archetypes-parent</artifactId>
-    <version>2.3.0.CR1</version>
+    <version>2.3.0.Final</version>
   </parent>
 
   <artifactId>jboss-errai-kitchensink-archetype</artifactId>
